service-fastapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
