service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: standard
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  #clusterIP: None  # Headless service requis pour le StatefulSet
