ingress-fastapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace:
spec:
  ingressClassName: traefik
  rules:
    - host: userapp.astride-datascientest.ip-ddns.com #sous-domaine créé sur cloudns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
